--- a/08.FlexBox/Project/style.css
+++ b/08.FlexBox/Project/style.css
@@ -69,7 +69,7 @@
         rgba(75, 123, 236, 0.5),
         rgba(67, 206, 162, 0.7)
       ),
-      url("https://cdn.pixabay.com/photo/2019/07/14/16/29/pen-4337524_1280.jpg");
+      url("Assests/background-img.jpeg");
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -203,10 +203,12 @@
     text-align: center;
     color: var(--white);
   }
+
   .cta h2 {
     margin-bottom: 20px;
     font-size: 36px;
   }
+
   .cta p {
     margin-bottom: 20px;
   }
@@ -237,8 +239,7 @@
     color: var(--text-color);
     font-weight: 500;
   }
-  input,
-  textarea {
+  input,textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ddd;
